# Ai-Agent

./: .env  Facts about Universe.md  Facts about World.md  One Piece Anime_article.md  README.md  pyproject.toml
Article Writer/: .env  crew.py  main.py  pyproject.toml
Article Writer/Results/: Artificial Intelligence.md  Facts about Universe.md  agents.yaml
Article Writer/config/: agents.yaml  tasks.yaml
Knowledge/: Artificial Intelligence.md  Facts about World.md  Machine Learning.md
Meeting Minutes/: .env  action_items.txt  agents.yaml  main.py
Meeting Minutes/Transcribe Result/: action_items.txt  sentiment.txt  summary.txt
Meeting Minutes/crews/gmailcrew/: gmailcrew.py
Meeting Minutes/crews/gmailcrew/config/: agents.yaml  gmail_tool.py  tasks.yaml
Meeting Minutes/crews/gmailcrew/tools/: credentials.json  gmail_tool.py  gmail_utility.py
Meeting Minutes/meeting_minutes_crew/config/: agents.yaml  meeting_minutes_crew.py  tasks.yaml
Results/: Facts about World.md  Machine Learning.md
