[project]
name = "news_project"
version = "0.1.0"
description = "news-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
news_project = "news_project.main:run"
run_crew = "news_project.main:run"
train = "news_project.main:train"
replay = "news_project.main:replay"
test = "news_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
